[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/core/lib.rs"

[dependencies]
linkme = "0.3.33"
neon = "1.1.1"
serde_json = "1.0.145"

[dependencies.tokio]
version = "1.48.0"
features = ["time", "rt-multi-thread"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.bondage]
path = "src/lib/rust/bondage"
